--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -28,7 +28,7 @@
             <div class="row">
                 <div class="col s7 m6 l6">
                     {{!-- <a href="#terms" class="modal-trigger"> --}}
-                        <div class="card luluble-light-pink darken-1">
+                        <div class="card hoverable luluble-light-pink darken-1">
 
                             <div class="card-content white-text">
                                 {{!-- projects/{{this.project_name}} --}}
