--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -22,7 +22,62 @@
 
             <!-- https://materializecss.com/cards.html -->
 
-                    <h1>Projects </h1>
+            <h1>Projects </h1>
+
+            <div class="col s12 m6 offset-m3">
+                <p></p>
+            </div>
+            <div class="col s12 m6 offset-m3" style="width: 50%;">
+                <p></p>
+                <nav>
+                    <div class="nav-wrapper pink">
+                        <div class="input-field">
+                            <input type="search" id="gsearch" name="gsearch">
+                            <label for="search" class="label-icon"> <i class="material-icons">search</i></label>
+                            {{!-- <input type="submit"> --}}
+                            <i class="material-icons">close</i>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+                        <div class="col s12 m6 offset-m3">
+                <p></p>
+            </div>
+
+
+            <script>
+                const search = document.querySelector('#gsearch');
+
+                let searchBar = document.getElementById('gsearch');
+                let searchButton = document.getElementById('search-button');
+                let searchTerm;
+
+                search.addEventListener('change', (event) => {
+                    console.log("ok")
+                    searchTerm = searchBar.value.trim();
+                    searchBar.value = searchTerm;
+
+                    const stateObj = { url: '/projects' };
+                    const title = '';
+                    const newUrl = '/projects';
+                    if (searchTerm.length === 0) {
+                        window.location.assign("/projects");
+                    }
+                    else {
+                        if (window.location.href.indexOf("projects/") !== -1) {
+                            console.log(searchTerm);
+                            window.location.assign("/projects/search/" + searchTerm);
+
+                        }
+                        else {
+                            console.log("projects/" + searchTerm);
+                            window.location.assign("/projects/search/" + searchTerm);
+
+                        }
+                    }
+                });
+            </script>
+
 
             {{#each results}}
             <div class="row">
@@ -263,31 +318,3 @@
     </body>
 
 </html>
-
-{{!-- <div style="padding:20px">
-    <table>
-        <thead>
-            <tr>
-                <th>ID
-                    <span class="large material-icons">import_export</span>
-                </th>
-                <th>Name
-                    <span class="large material-icons">import_export</span>
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-
-            {{#each results}}
-            <tr>
-                <td>{{this.formula_id}}
-
-                </td>
-
-                <td>{{this.test_name}}</td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
-</div> --}}
