--- a/views/project_assign.hbs
+++ b/views/project_assign.hbs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="/styles/projects.css">
     <link rel="stylesheet" href="/partials/color.css">
+    <link rel="stylesheet" href="/public/styles/project_assign.css">
     <script type="text/javascript" src="/routes/projects.js"></script>
 </head>
 
@@ -15,12 +16,12 @@
         {{> navbar}}
         {{> logout}}
     </div>
-    <div class="col s6" style="padding: 2% 2% 0% 2%">
+    <div class="col s1" style="padding: 2% 2% 0% 2%">
         <!-- https://materializecss.com/cards.html -->
         <h1>Project Assign </h1>
         {{#each results}}
         <div class="row">
-            <div class="col s7 m6 l6">
+            <div class="col s7 m6 l5">
                 {{!-- <a href="#terms" class="modal-trigger"> --}}
                     <div class="card luluble-light-pink darken-1">
                         <div class="card-content white-text">
@@ -28,11 +29,11 @@
                             <span class="card-title"><a style="color: black;"
                                     href="/projects/{{project_id}}"><b>{{project_name}}</a></b></span>
                             <p style="color: black;">Client: {{client}}</p>
-                           <p style="color: black;">{{date}}</p>
-                           <p style="color: black;">Scientists Assigned to this Project: </p>
+                            <p style="color: black;">{{date}}</p>
+                            <p style="color: black;">Scientists Assigned to this Project: </p>
                         
                             {{#each scientists}}
-                                 <div class="chip">
+                                <div class="chip">
                                     Scientist Name: {{name}}
                                    
                                     <a href = "/project-assign/remove/{{../project_id}}/{{scientist_id}}" <i class="close material-icons">close</i></a>
@@ -41,109 +42,128 @@
                          
 
                             <div class="col s12">&nbsp;</div>
-                            <div class="row">
-                                <div class="col s12 m4 l4">
-                                    <a href="#term{{project_id}}" class="modal-trigger">
-                                        <span class="btn-small luluble-light-grey">See More</span>
-                                    </a>
-                                </div>
+                                <div class="row">
+                                    <div class="col s12 m4 l4">
+                                        <a href="#term{{project_id}}" class="modal-trigger">
+                                            <span class="btn-small luluble-light-grey">See More</span>
+                                        </a>
+                                    </div>
 
-                              
-                                <div class="col s10 m4 l7">
-                                    <form method="POST">
-                                        <select name="select_assign" id="select_assign" data-project-id="{{project_id}}"
-                                            class="browser-default">
-                                            <option value="0" disabled selected>Assign a Scientist to This Project</option>
+                                
+                                    <div class="col s10 m4 l7">
+                                        <form method="POST">
+                                            <select name="select_assign" id="select_assign" data-project-id="{{project_id}}"
+                                                class="browser-default">
+                                                <option value="0" disabled selected>Assign a Scientist to This Project</option>
 
-                                            {{#each remainingScientists}}
-                                            {{!-- NEED TO GET PROJECT_ID SOMEHOW --}}
-                                            <option value="{{../project_id}}/{{scientist_id}}">{{name}}</option>
-                                            {{/each}}
-                                            {{!-- <option value="Scientist1">Scientist 1</option>
-                                            <option value="Scientist2">Scientist 2</option>
-                                            <option value="Scientist3">Scientist 3</option>
-                                            <option value="Scientist4">Scientist 4</option> --}}
-                                        </select>
-                                    </form>
-                                </div>
+                                                {{#each remainingScientists}}
+                                                {{!-- NEED TO GET PROJECT_ID SOMEHOW --}}
+                                                <option value="{{../project_id}}/{{scientist_id}}">{{name}}</option>
+                                                {{/each}}
+                                                {{!-- <option value="Scientist1">Scientist 1</option>
+                                                <option value="Scientist2">Scientist 2</option>
+                                                <option value="Scientist3">Scientist 3</option>
+                                                <option value="Scientist4">Scientist 4</option> --}}
+                                            </select>
+                                        </form>
+                                    </div>
+                                </div> 
                             </div>
                         </div>
+                        {{!-- ^^ card content div --}}
                     </div>
-            </div>
-        </div>
-    </div>
+                    {{!-- ^^ card luluble light pink --}}
+                </div>
+                {{!-- ^^  column close  --}}
+            
 
-    {{!-- </a> --}}
-    {{/each}}
+                {{/each}}
+                <div class="row">
+                    <div class="s6">
+                    <div style="overflow-x: scroll;" class = "col s7 m4 l6">
+                        <table class = "scrollable">
+                            <thead>
+                                <tr>
+                                    <th>User</th>
+                                    <th>Email</th>
+                                    <th>Role</th>
+                                    <th>Edit</th>
+                                </tr>
+                            </thead>
+                            
 
-    <div class="col s6">
-        <table>
-        <thead>
-          <tr>
-              <th>User</th>
-              <th>Email</th>
-              <th>Role</th>
-              <th>Edit</th>
-          </tr>
-        </thead>
+                            <tbody> 
+                            {{#each scientist_data}}
+                                <tr>
+                                    <td>{{name}}</td>
+                                    <td>{{email}}</td>
+                                    <td>{{role}}</td>
+                                    <td>
+                                        <div class="edit_button">
+                                        <a href="#edit_scientist{{scientist_id}}" class="btn waves-effect waves-light-grey luluble-light-grey modal-trigger">Edit</a>
+                                            <div class="modal" id="edit_scientist{{scientist_id}}">
+                                                <div style="padding: 5% 5% 5% 5%">
+                                                    {{!-- <b><span>Add a New Ingredient</span></b> --}}
+                                                    <h1 style="font-size:40px;">Edit User</h1>
 
-        <tbody> 
-          {{#each scientist_data}}
-          <tr>
-            <td>{{name}}</td>
-            <td>{{email}}</td>
-            <td>{{role}}</td>
-            <td>
-                <button><a href = "#edit">Edit</a></button>
+                                                    <form method="POST" action="/project_assign/edituser/{{scientist_id}}">
+                                                        <article class="regular">
+                                                            {{!-- <h2>Textbook</h2> --}}
+
+                                                            {{!-- Field 1 --}}
+                                                            <b><label for="tuluble">Name:</label></b>
+                                                            <input type="text" name = "name" id="name" value="{{this.name}}" maxlength="100">
+                                                            <p> </p>
+
+                                                            {{!-- Field 2 --}}
+                                                            <b><label for="tuluble">Email:</label></b>
+                                                            <input type="text" name = "email" id="email" value="{{this.email}}" maxlength="100">
+                                                            <p> </p>
+
+                                                            {{!-- Field 3 --}}
+                                                            <b><label for="tuluble">Role:</label></b>
+                                                            <select name="role" id="role" class="browser-default">
+                                                                <option value="0" disabled selected>Select/Reselect a role</option>
+                                                                <option value="0">Scientist</option>
+                                                                <option value="1">Admin</option>
+                                                            </select>
+
+                                                            <div class="edit_user_button">
+                                                                <button id = "edit_user_button" type="submit" class="btn waves-effect waves-luluble-pink luluble-pink">Save</button>
+                                                                {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
+                                                            </div>
+
+                                                            <p> </p>
+                                                        </article>
+                                                    </form>
+                                                    
+                                                </div>
+                                            </div>
+                                            {{!-- ^^ modal close --}}
+                                        </div>
+                                    </td>
+                                </tr>
+
+                                
+                                    
+                            {{/each}}
+                            </tbody>
+                        </table>
                 
-            </td>
-          </tr>
-
-          <div class="modal" id="edit">
-                    <div style="padding: 5% 5% 5% 5%">
-                        {{!-- <b><span>Add a New Ingredient</span></b> --}}
-                        <h1 style="font-size:40px;">Edit User</h1>
-
-                        <form method="POST" action="/project_assign/edituser/{{scientist_id}}">
-                            <article class="regular">
-                                {{!-- <h2>Textbook</h2> --}}
-
-                                {{!-- Field 1 --}}
-                                <b><label for="tuluble">Name:</label></b>
-                                <input type="text" name = "name" id="name" placeholder="Enter User Name" maxlength="100">
-                                <p> </p>
-
-                                {{!-- Field 2 --}}
-                                <b><label for="tuluble">Email:</label></b>
-                                <input type="text" name = "email" id="email" placeholder="Enter User Email" maxlength="100">
-                                <p> </p>
-
-                                {{!-- Field 3 --}}
-                                <b><label for="tuluble">Role:</label></b>
-                                <select name="role" id="role" class="browser-default">
-                                    <option value="0" disabled selected>Select a role</option>
-                                    <option value="0">Scientist</option>
-                                    <option value="1">Admin</option>
-                                </select>
-
-                                <div class="edit_user_button">
-                                <button id = "edit_user_button" 
-                                type="submit"
-                                class="btn waves-effect waves-luluble-pink luluble-pink"
-                                >Save</button>
-                                {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
-                                </div>
-                                <p> </p>
-                            </form>
-                        </article>
+                    </div>
+                    {{!-- ^^ column div close --}}
                     </div>
                 </div>
-                
-          {{/each}}
-        </tbody>
-      </table>
-            
-    </div>
+                {{!-- ^^ smaller row close --}}
+            </div>
+            {{!-- ^^ row close --}}
+        </div>
+        {{!-- ^^whole thing close --}}
+
+    {{!-- </a> --}}
+    
+
+    
 
     <script>
         const dropdowns = document.querySelectorAll('#select_assign');
