changed error page to go back instead of home

--- a/views/error.hbs
+++ b/views/error.hbs
@@ -15,14 +15,14 @@
                                 name="add_button" 
                                 onclick="redirectToPage()"
                                 class="btn waves-effect waves-luluble-pink luluble-pink">
-                                Go Home</button>
+                                Go Back</button>
         </div>
     
     </body>
 
     <script>
       function redirectToPage() {
-        window.location.href = "http://localhost:3000/";
+        window.history.back();
       }
     </script>
 </html>
