--- a/views/archive.hbs
+++ b/views/archive.hbs
@@ -178,7 +178,7 @@
                                 <td>{{this.shelf}}</td>
                                 <td>
                                     <div class="delete_button">
-                                        <a href="unarchive-ingredient/{{this.ingredient_id}}" class="btn waves-effect waves-luluble-pink luluble-pink">Unarchive</a>
+                                        <a href="/unarchive-ingredient/{{this.ingredient_id}}" class="btn waves-effect waves-luluble-pink luluble-pink">Unarchive</a>
                                     </div>
                             </td>
                             </tr>
@@ -259,7 +259,7 @@
                                                     </div>
                                                     <div class = "col s12 m4 l2"></div>
                                                         <div class="delete_button">
-                                                            <a href="unarchive-project/{{this.project_id}}" class="btn waves-effect waves-light-grey luluble-light-grey">Unarchive</a>
+                                                            <a href="/unarchive-project/{{this.project_id}}" class="btn waves-effect waves-light-grey luluble-light-grey">Unarchive</a>
                                                         </div>
                                         </div>
                                 </div>
