--- a/views/project_assign.hbs
+++ b/views/project_assign.hbs
@@ -132,6 +132,8 @@
                                 type="submit"
                                 class="btn waves-effect waves-luluble-pink luluble-pink"
                                 >Save</button>
+
+                                <button href = "deleteUser">DELETE USER</button>
                                 {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
                                 </div>
                                 <p> </p>
