--- a/views/project_assign.hbs
+++ b/views/project_assign.hbs
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col s7 m6 l6">
                 {{!-- <a href="#terms" class="modal-trigger"> --}}
-                    <div class="card luluble-light-pink darken-1">
+                    <div class="card luluble-light-pink darken-1" id = "#{{project_id}}">
                         <div class="card-content white-text">
                             {{!-- projects/{{this.project_name}} --}}
                             <span class="card-title"><a style="color: black;"
